<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/swipeNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header_swipe_menu"
        app:menu="@menu/swipe_menu"
        android:layout_gravity="start"
        app:itemIconTint="@android:color/secondary_text_light"
        app:itemTextColor="@android:color/secondary_text_light"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/baloo"
                        android:text="@string/binusezyfood"
                        android:textColor="#D5C859"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/textViewMotto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewCompanyName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/baloo"
                        android:text="@string/always_serving_the_best"
                        android:textColor="@android:color/secondary_text_light" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMoney"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewMoney"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#D5C859"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="#FFFFFF"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/baloo"
                                android:text="EzyWallet Balance"
                                android:textColor="@android:color/secondary_text_light"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/textView4"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/baloo"
                                android:text="Rp 10.000"
                                android:textColor="@android:color/secondary_text_light"
                                android:textSize="40sp" />
                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutDrinksFoods"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewDrinks"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <RelativeLayout
                        android:id="@+id/RelativeLayoutDrinks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#FFFFFF">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView11"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/baloo"
                            android:text="@string/drinks"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:background="#FFFFFF"
                            android:contentDescription="@string/imageofdrinks"
                            app:srcCompat="@mipmap/drinks" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewFoods"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/baloo"
                            android:text="@string/foods"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/imageoffood"
                            app:srcCompat="@mipmap/foods" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewSnacks"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView3"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/baloo"
                            android:text="@string/snacks"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/imageofsnacks"
                            app:srcCompat="@mipmap/desserts" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewTopup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView4"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/baloo"
                            android:text="@string/topup"
                            android:textColor="@android:color/secondary_text_light"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/imageofpayment"
                            app:srcCompat="@mipmap/payment" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>